обновлен сваггер для Transport
